Fixed layout problem

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -355,6 +355,7 @@ input[type=range][orient=vertical] {
 
 #live-coding > .main {
 	display: flex;
+	flex-direction: column;
 	flex: 1;
 	width: 100%;
 }
